<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context="com.example.nttr.wandering.SecondActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="280dp"
        android:layout_height="225dp"
        android:layout_marginBottom="8dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnUp"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@null"
            android:contentDescription="@string/btn_UP"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrow_up" />

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@null"
            android:contentDescription="@string/btn_Left"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@null"
            android:contentDescription="@string/btn_Right"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrow_right" />

        <ImageButton
            android:id="@+id/btnDown"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@null"
            android:contentDescription="@string/btn_Down"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/arrow_down" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="384dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textScore"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="end"
            android:paddingRight="30dp"
            android:text="@string/text_Score"
            android:textAlignment="textEnd"
            android:textColor="@color/text_dark_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textStageInfo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:text="@string/text_StageInfo"
            android:textColor="@color/text_dark_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textMoveLeft"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="end"
            android:paddingRight="30dp"
            android:text="@string/text_MoveLeft"
            android:textAlignment="textEnd"
            android:textColor="@color/text_dark_gray"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollMultiLine"
        android:layout_width="360dp"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/frame_style"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.769">

        <TextView
            android:id="@+id/textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_Info"
            android:textColor="@color/text_dark_blue"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>
