<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context="com.example.nttr.wandering.MainActivity">

    <TextView
        android:id="@+id/textScore2"
        android:layout_width="368dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:paddingRight="30dp"
        android:text="@string/text_Score"
        android:textAlignment="textEnd"
        android:textColor="@color/text_dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_Title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textIsSelectable="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore2" />

    <TextView
        android:id="@+id/textExplain"
        android:layout_width="285dp"
        android:layout_height="241dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_about"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="183dp"
        android:layout_height="101dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_Start"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExplain"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
